--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,15 @@
 /* header and nav layout */
+header {
+  height: 100px;
+  width: 100%;
+}
+
 header .nav-wrapper {
   background-color: var(--background-color);
   width: 100%;
   z-index: 2;
-  position: fixed;
+  position: relative;
+  height: 100px;
 }
 
 header nav {
@@ -14,11 +20,10 @@ header nav {
     'sections sections sections' 1fr / auto 1fr auto;
   align-items: center;
   gap: 0 2em;
-  margin: auto;
-  max-width: 1264px;
-  height: var(--nav-height);
-  padding: 0 1rem;
+  margin: 0 3%;
+  max-width: 100%;
   font-family: var(--body-font-family);
+  height: 100%;
 }
 
 header nav[aria-expanded="true"] {
@@ -32,7 +37,7 @@ header nav[aria-expanded="true"] {
 
 @media (width >= 600px) {
   header nav {
-    padding: 0 2rem;
+    padding: 0 1.6rem;
   }
 }
 
@@ -141,15 +146,16 @@ header nav[aria-expanded="true"] .nav-hamburger-icon::after {
 /* brand */
 header .nav-brand {
   grid-area: brand;
-  flex-basis: 128px;
+  flex-basis: 11.6%;
   font-size: var(--heading-font-size-s);
   font-weight: 700;
   line-height: 1;
+  padding-top: 0.3%;
 }
 
 header nav .nav-brand img {
-  width: 128px;
-  height: auto;
+  width: 100%;
+  height: 100%;
 }
 
 /* sections */
@@ -159,6 +165,9 @@ header nav .nav-sections {
   display: none;
   visibility: hidden;
   background-color: var(--overlay-color);
+  max-width: 52%;
+  font-weight: bold;
+  /*margin: 0 9%;*/
 }
 
 header nav[aria-expanded="true"] .nav-sections {
@@ -272,4 +281,60 @@ header nav .nav-sections ul > li > ul > li {
 /* tools */
 header nav .nav-tools {
   grid-area: tools;
+  width: 13%;
+  padding: auto 0;
 }
+
+#nav > div.section.nav-sections > div > ul {
+  justify-content: space-between;
+}
+
+#nav > div.section.nav-sections > div > ul > li {
+  font: 410 1.05rem helvetica-neue-55, 'sans-serif';
+  line-height: 23px;
+  /*letter-spacing: 0.001em;*/
+}
+
+#nav > div.section.nav-sections > div {
+  margin-left: 5%;
+}
+
+#nav > div.section.nav-tools > div > p {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font: 400 14px helvetica-neue-65, 'sans-serif';
+  color: #5c6163;
+}
+
+#nav > div.section.nav-tools > div > p > span > img {
+  transform: scale(0.7);
+}
+
+header .navigation {
+  position: relative;
+  transition: top .3s linear 0s;
+}
+
+.dropped {
+  position: fixed;
+  /*top: 0;*/
+  /*transition: top .6s cubic-bezier(.42,0,.32,1.02) 0s;*/
+  width: 100%;
+  z-index: 11;
+}
+
+/*@supports (-ms-ime-align:auto) {*/
+/*  .navigation {*/
+/*    -webkit-animation-timing-function: ease-out;*/
+/*    animation-timing-function: ease-out;*/
+/*    transition: top .9s linear 0s*/
+/*  }*/
+
+/*  .navigation {*/
+/*    width: 99%;*/
+/*    transition: .2s;*/
+/*    -webkit-animation-timing-function: ease-out;*/
+/*    animation-timing-function: ease-out*/
+/*  }*/
+/*}*/
