--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -29,3 +29,67 @@
   aspect-ratio: 4 / 3;
   object-fit: cover;
 }
+.news {
+  background-color: #f7f8f9;
+}
+body > main > div.section.news.cards-container > div {
+  max-width: 100%;
+  margin: 0 3%;
+}
+
+body > main > div.section.news.cards-container > div > div > ul {
+  display: flex;
+  justify-content: center;
+  column-gap: 5%
+}
+
+body > main > div.section.news.cards-container > div > div > ul > li{
+  max-width: 30%;
+  border: none;
+}
+
+body > main > div.section.news.cards-container > div > div > ul > li > div.cards-card-body h3 {
+  font-size: 1.47059rem;
+  line-height: 31px;
+  padding-bottom: 22.125px;
+  letter-spacing: 0;
+  text-align: left;
+  font-family: 'helvetica-neue-75', sans-serif;
+  color: #1d252c;
+  margin: 0;
+}
+
+body > main > div.section.news.cards-container > div > div > ul > li > div.cards-card-image {
+  height: 40%;
+}
+
+body > main > div.section.news.cards-container > div > div > ul > li > div.cards-card-image > picture > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+body > main > div.section.news.cards-container > div > div > ul > li > div.cards-card-body > p {
+  color: #5c6163;
+  font-size: .85353rem;
+  letter-spacing: 0.001rem;
+  line-height: 24px;
+  font-family: 'helvetica-neue-55', sans-serif;
+  text-align: left;
+  -webkit-font-smoothing: antialiased;
+}
+
+body > main > div.section.news.cards-container > div > div > ul > li > div.cards-card-body {
+  padding: 5% 3%;
+}
+
+body > main > div.section.news.cards-container > div > div > ul > li > div.cards-card-body > p.button-container > strong > a {
+  color: #1971d4;
+  background-color: white;
+  margin: 2% 0;
+  padding: 0;
+  font: 600 1.15rem helvetica-neue-65, sans-serif;
+  border: none;
+  overflow: visible;
+}
+
