--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -19,15 +19,128 @@
   display: block;
 }
 
-@media (width >= 900px) {
-  .columns > div {
-    align-items: center;
-    flex-direction: unset;
-    gap: 32px;
-  }
+body > main > div.section.customer-reports.columns-container > div > div > div {
+  gap: 0;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+}
 
-  .columns > div > div {
-    flex: 1;
-    order: unset;
-  }
+body > main > div.section.customer-reports.columns-container > div > div > div > div.columns-img-col {
+  display: block;
+  max-width: 50%;
+}
+
+body > main > div.section.customer-reports.columns-container > div > div > div > div.columns-img-col > picture > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+body > main > div.section.customer-reports.columns-container > div > div > div > div:nth-child(2) {
+  background-color: #1d252c;
+  color: white;
+  padding: 6% 4%;
+  max-width: 50%;
+}
+
+body > main > div.section.customer-reports.columns-container > div > div > div > div:nth-child(2) h2 {
+  font-size: 1.88235rem;
+  line-height: 38px;
+  padding-bottom: 22.44px;
+  text-align: center;
+  letter-spacing: -.5px;
+  font-weight: normal;
+  font-family: helvetica-neue-75, sans-serif;
+  margin-bottom: 0;
+}
+
+body > main > div.section.customer-reports.columns-container > div > div > div > div:nth-child(2) > p:nth-child(2) {
+  font-size: .82353rem;
+  line-height: 24px;
+  color: #b7bcc2;
+  text-align: center;
+  margin-top: 0;
+}
+
+body > main > div.section.customer-reports.columns-container > div > div > div > div:nth-child(2) > p.button-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+body > main > div.section.customer-reports.columns-container > div > div > div > div:nth-child(2) > p.button-container > a {
+  background-color: #1971d4;
+  border-color: #1971d4;
+  color: #fff;
+  border-radius: 5px;
+  width: 69%;
+  font: 400 .82353rem helvetica-neue-65, sans-serif;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  margin-top: 1%;
+}
+
+body > main > div.section.customer-reports.columns-container > div {
+  max-width: 75%;
+}
+
+body > main > div.section.customer-options.columns-container {
+  padding: 0;
+}
+
+.customer-options {
+  height: 500px;
+}
+
+.customer-options > div {
+  max-width: 100%;
+  margin: 0;
+  height: 100%;
+}
+
+body > main > div.section.customer-options.columns-container > div > div {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  column-gap: 0;
+  height: 100%;
+}
+
+body > main > div.section.customer-options.columns-container > div > div > div {
+  min-width: 25%;
+  height: 100%;
+}
+
+body > main > div.section.customer-options.columns-container > div > div > div > div {
+    color: black;
+    padding: 6% 11%;
+    text-align: left;
+    min-width: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    height: 100%;
+}
+
+body > main > div.section.customer-options.columns-container > div > div > div > div h2 {
+  margin-top: 50%;
+  font: bold 2.5rem helvetica-neue-75, sans-serif;
+  min-height: 10%;
+}
+
+body > main > div.section.customer-options.columns-container > div > div > div > div p {
+  font: 400 0.9rem helvetica-neue-55, sans-serif;
+  padding-right: 18%;
+  min-height: 25%;
+}
+
+body > main > div.section.customer-options.columns-container > div > div > div > div:hover {
+  background-color: #1971d4;
+  color: white;
+}
+
+body > main > div.section.customer-options.columns-container > div > div > div:nth-child(1) > div > p.button-container {
+  min-height: 20%;
 }
