--- a/blocks/tabs/tabs.css
+++ b/blocks/tabs/tabs.css
@@ -82,7 +82,6 @@ body > main > div.section.vehicle-categories.tabs-container > div > div > .tabs-
     border: none;
     max-width: 90%;
     margin: 2% auto;
-    transition: aria-hidden 0.5s ease;
 }
 
 .vehicle-categories .tabs-panel > div {
@@ -156,6 +155,25 @@ body > main > div.section.vehicle-categories.tabs-container > div > div > .tabs-
     border-radius: 3px;
     display: inline-block;
     color: #1d252c;
+}
+
+body > main > div.section.vehicle-categories.tabs-container > div > div {
+    animation: scroll-fadein 1s ease 0s 1 forwards;
+}
+
+.active-panel {
+    animation: scroll-fadein 0.8s ease 0s 1 forwards;
+}
+
+@keyframes scroll-fadein {
+    0% {
+        opacity: 0;
+        transform: translateY(25px)
+    }
+
+    to {
+        opacity: 1
+    }
 }
 
 
