--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,7 +8,7 @@ header .nav-wrapper {
   background-color: var(--background-color);
   width: 100%;
   height: 100px;
-  z-index: 2;
+  z-index: 20;
   position: fixed;
   border-bottom: 1px solid #e7e7e8;
 }
@@ -294,6 +294,18 @@ header nav .nav-tools {
   font: 410 1.05rem helvetica-neue-55, 'sans-serif';
   line-height: 23px;
   /*letter-spacing: 0.001em;*/
+}
+
+#nav > div.section.nav-sections > div > ul > li:hover {
+  color: #1971d4 !important;
+  transition: height .3s, width .3s, background .3s, border .3s, color .3s, margin .3s, box-shadow .3s;
+  cursor: pointer;
+}
+
+#nav > div.section.nav-tools > div > p > span:hover {
+  color: #1971d4 !important;
+  transition: height .3s, width .3s, background .3s, border .3s, color .3s, margin .3s, box-shadow .3s;
+  cursor: pointer;
 }
 
 #nav > div.section.nav-sections > div {
