--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -102,7 +102,7 @@ body > footer > div > div > div.section.footer-top.columns-container > div.defau
   display: block;
   width: 5.5%;
   padding: 1.5%;
-  background-color: white;
+  background-color: #f7f8f9;
   position: relative;
 }
 
