--- a/blocks/hero-carousel/hero-carousel.css
+++ b/blocks/hero-carousel/hero-carousel.css
@@ -1,26 +1,26 @@
-.carousel .carousel-slides-container {
+.hero-carousel .hero-carousel-slides-container {
     position: relative;
 }
 
-.carousel .carousel-slides,
-.carousel .carousel-slide-indicators {
+.hero-carousel .hero-carousel-slides,
+.hero-carousel .hero-carousel-slide-indicators {
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
-.carousel .carousel-slides {
+.hero-carousel .hero-carousel-slides {
     display: flex;
     scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
     overflow: scroll clip;
 }
 
-.carousel .carousel-slides::-webkit-scrollbar {
+.hero-carousel .hero-carousel-slides::-webkit-scrollbar {
     display: none;
 }
 
-.carousel .carousel-slide {
+.hero-carousel .hero-carousel-slide {
     flex: 0 0 100%;
     scroll-snap-align: start;
     display: flex;
@@ -32,26 +32,26 @@
     min-height: min(40rem, calc(100svh - var(--nav-height)));
 }
 
-.carousel .carousel-slide:has(.carousel-slide-content[data-align="center"]) {
+.hero-carousel .hero-carousel-slide:has(.hero-carousel-slide-content[data-align="center"]) {
     align-items: center;
 }
 
-.carousel .carousel-slide:has(.carousel-slide-content[data-align="right"]) {
+.hero-carousel .hero-carousel-slide:has(.hero-carousel-slide-content[data-align="right"]) {
     align-items: flex-end;
 }
 
-.carousel .carousel-slide .carousel-slide-image picture {
+.hero-carousel .hero-carousel-slide .hero-carousel-slide-image picture {
     position: absolute;
     inset: 0;
 }
 
-.carousel .carousel-slide .carousel-slide-image picture > img {
+.hero-carousel .hero-carousel-slide .hero-carousel-slide-image picture > img {
     height: 100%;
     width: 100%;
     object-fit: cover;
 }
 
-.carousel .carousel-slide .carousel-slide-content {
+.hero-carousel .hero-carousel-slide .hero-carousel-slide-content {
     z-index: 1;
     padding: 1rem;
     margin: 1.5rem 3rem;
@@ -61,28 +61,20 @@
     width: var(--slide-content-width, auto);
 }
 
-.carousel .carousel-slide-indicators {
+.hero-carousel .hero-carousel-slide-indicators {
     display: flex;
     justify-content: center;
     gap: 0.5rem;
 }
 
-.carousel .carousel-slide-indicator button {
-    width: 1rem;
-    height: 1rem;
-    padding: 0;
-    border-radius: 1rem;
-    background-color: rgba(0 0 0 / 25%);
-}
-
-.carousel .carousel-slide-indicator button:disabled,
-.carousel .carousel-slide-indicator button:hover,
-.carousel .carousel-slide-indicator button:focus-visible {
+.hero-carousel .hero-carousel-slide-indicator button:disabled,
+.hero-carousel .hero-carousel-slide-indicator button:hover,
+.hero-carousel .hero-carousel-slide-indicator button:focus-visible {
     background-color: rgba(0 0 0 / 80%);
 }
 
-.carousel .carousel-slide-indicator span,
-.carousel .carousel-navigation-buttons span {
+.hero-carousel .hero-carousel-slide-indicator span,
+.hero-carousel .hero-carousel-navigation-buttons span {
     border: 0;
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
@@ -95,7 +87,7 @@
     white-space: nowrap;
 }
 
-.carousel .carousel-navigation-buttons {
+.hero-carousel .hero-carousel-navigation-buttons {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -108,7 +100,7 @@
 }
 
 /* stylelint-disable-next-line no-descending-specificity */
-.carousel .carousel-navigation-buttons button {
+.hero-carousel .hero-carousel-navigation-buttons button {
     border-radius: 8px;
     margin: 0;
     padding: 0;
@@ -118,12 +110,12 @@
     background-color: rgba(0 0 0 / 25%);
 }
 
-.carousel .carousel-navigation-buttons button:hover,
-.carousel .carousel-navigation-buttons button:focus-visible {
+.hero-carousel .hero-carousel-navigation-buttons button:hover,
+.hero-carousel .hero-carousel-navigation-buttons button:focus-visible {
     background-color: rgba(0 0 0 / 80%);
 }
 
-.carousel .carousel-navigation-buttons button::after {
+.hero-carousel .hero-carousel-navigation-buttons button::after {
     display: block;
     content: "";
     border: 3px white solid;
@@ -137,34 +129,132 @@
     transform: translate(-50%, -50%) rotate(-135deg);
 }
 
-.carousel .carousel-navigation-buttons button.slide-next::after {
+.hero-carousel .hero-carousel-navigation-buttons button.slide-next::after {
     transform: translate(-50%, -50%)  rotate(45deg);
     left: calc(50% - 3px);
 }
 
 @media (width >= 600px) {
-    .carousel .carousel-navigation-buttons {
+    .hero-carousel .hero-carousel-navigation-buttons {
         left: 1rem;
         right: 1rem;
     }
 
-    .carousel .carousel-navigation-buttons button {
+    .hero-carousel .hero-carousel-navigation-buttons button {
         width: 3rem;
         height: 3rem;
     }
 
-    .carousel .carousel-navigation-buttons button::after {
+    .hero-carousel .hero-carousel-navigation-buttons button::after {
         width: 1rem;
         height: 1rem;
     }
 
-    .carousel .carousel-slide .carousel-slide-content {
+    .hero-carousel .hero-carousel-slide .hero-carousel-slide-content {
         --slide-content-width: 50%;
-
         margin: 2.5rem 5rem;
     }
 
-    .carousel .carousel-slide .carousel-slide-content[data-align="justify"] {
+    .hero-carousel .hero-carousel-slide .hero-carousel-slide-content[data-align="justify"] {
         --slide-content-width: auto;
     }
+}
+
+.hero-carousel-container {
+    padding: 0 !important;
+}
+
+body > main > div.section.hero-carousel-container > div {
+    max-width: unset;
+}
+
+.hero-carousel-container div.hero-carousel-slide-image > picture img {
+    object-fit: contain;
+}
+
+.hero-carousel-container div.hero-carousel-slide-content {
+    background-color: transparent !important;
+    width: 30% !important;
+    height: 60% !important;
+    margin: 0 !important;
+    margin-left: 5% !important;
+}
+
+.hero-carousel-navigation-buttons {
+    display: none !important;
+}
+
+.hero-carousel-container div.hero-carousel-slide-content {
+    background-color: transparent !important;
+    width: 29% !important;
+    height: 60% !important;
+    margin: 0 !important;
+    margin-left: 5% !important;
+    position: absolute !important;
+    top: 5%;
+}
+
+.hero-carousel-container div.hero-carousel-slide-content img {
+    left: -2% !important;
+}
+
+body > main > div.section.hero-carousel-container > div > div > div > ul > li > div.hero-carousel-slide-content > h2 {
+    font: bold 1.85rem helvetica-neue-75, sans-serif;
+}
+
+body > main > div.section.hero-carousel-container > div > div > div > ul > li > div.hero-carousel-slide-content > p:nth-child(3) {
+    font: 400 1rem helvetica-neue-55, sans-serif;
+    line-height: 1.5rem;
+}
+
+body > main > div.section.hero-carousel-container > div > div > div > ul > li > div.hero-carousel-slide-content > p.button-container > a {
+    border-radius: 8px;
+    margin-left: 0;
+    font: 400 0.8rem helvetica-neue-65, sans-serif;
+    padding: 0.7rem 0.95rem !important;
+    background-color: #1971d4;
+}
+
+.active-observer {
+    background-color: #1971d4 !important;
+}
+
+body > main > div.section.hero-carousel-container > div > div > div > ul > li > div.hero-carousel-slide-content > p.button-container > a:hover {
+    background-color: white;
+    color: black !important;
+}
+
+
+body > main > div.section.hero-carousel-container > div > div > div > ul > li {
+    height: 32rem !important;
+    min-height: unset !important;
+}
+
+body > main > div.section.hero-carousel-container > div > div > div > ul > li > div.hero-carousel-slide-content > p:nth-child(1) > picture img {
+    margin-top: 2.5rem;
+    position: relative;
+    left: -0.9rem !important;
+    height: 2.8rem;
+}
+
+body > main > div.section.hero-carousel-container > div > div > div > ul > li > div.hero-carousel-slide-content > p:nth-child(1) {
+    all: unset;
+}
+
+body > main > div.section.hero-carousel-container > div > div > nav {
+    position: absolute;
+    bottom: 6rem;
+    left: 5.5rem;
+}
+
+.hero-carousel .hero-carousel-slide-indicator button {
+    width: 0.4rem;
+    height: 0.4rem;
+    padding: 0;
+    border-radius: 0.4rem;
+    background-color: white;
+}
+
+body > main > div.section.hero-carousel-container > div > div > nav > ol {
+    gap: 0.75rem;
 }
