--- a/blocks/hero-carousel/hero-carousel.css
+++ b/blocks/hero-carousel/hero-carousel.css
@@ -198,7 +198,7 @@ body > main > div.section.hero-carousel-container > div {
     left: -2% !important;
 }
 
-body > main > div.section.hero-carousel-container > div > div > div > ul > li > div.hero-carousel-slide-content > h2 {
+body > main > div.section.hero-carousel-container > div > div > div > ul > li > div.hero-carousel-slide-content > p:nth-child(2) {
     font: bold 1.85rem helvetica-neue-75, sans-serif;
 }
 
