--- a/blocks/tabs/tabs.css
+++ b/blocks/tabs/tabs.css
@@ -70,6 +70,7 @@ body > main > div.section.vehicle-categories.tabs-container > div > div > div.ta
 body > main > div.section.vehicle-categories.tabs-container {
     margin-top: 0;
     padding-top: 0;
+    min-height: 520px;
 }
 
 .vehicle-categories .tabs-wrapper {
